k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
  labels:
    app: board
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board   # ← selector에 matchLabels 추가
  template:
    metadata:
      labels:
        app: board  # ← template의 labels와 위 matchLabels가 동일해야 함
    spec:
      containers:
        - name: board
          image: docker.io/seokheounjo/board:latest
          ports:
            - containerPort: 8080
