k8s/board-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board
spec:
  selector:
    app: board
  ports:
    - port: 8080
      targetPort: 8080
