k8s/board-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: board.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board
                port:
                  number: 8080
